# ecommerce-recsys

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: best_params.yaml  data.yaml  database.yaml  mlflow_config.yaml  synthetic.yaml
notebooks/: ablation_study.ipynb
reports/: ablation_results.csv
reports/ablation_study/: all_ablation_results.csv  component_ablation.csv  event_weights.csv  key_findings.txt  learning_curve.csv  split_comparison.csv
scripts/: analyze_associations.py  analyze_funnel.py  analyze_heatmap.py  analyze_rfm.py  benchmark.py  evaluate_cold_start.py  evaluate_two_stage.py  generate_architecture.py  generate_synthetic.py  init_database.py  optimize.py  preprocess.py  show_top_rules.py  train_final_model.py  train_hybrid.py  train_lightfm_wsl.py  train_ncf_and_ab_test.py  train_with_mlflow.py  verify_stage2.py  verify_stage3.py
src/: __init__.py
src/analysis/: __init__.py  association_rules.py  funnel.py  heatmaps.py  rfm.py
src/api/: __init__.py  cache.py  main.py  routes.py  schemas.py
src/data/: __init__.py  database.py  loader.py  preprocessing.py  splitter.py  synthetic_generator.py
src/evaluation/: __init__.py  ab_testing.py  cold_start.py  evaluator.py  metrics.py
src/models/: __init__.py  base.py  collaborative.py  content_based.py  gru4rec.py  hybrid.py  knn.py  ncf.py  pipeline.py  popular.py  ranker.py
src/utils/: __init__.py  mlflow_utils.py
ui/: app.py
ui/pages/: analytics.py  experiments.py  recommendations.py
